Added team members & effects to homepage

--- a/team.html
+++ b/team.html
@@ -76,13 +76,127 @@
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/adipai.jpg"
+                alt="Adithya Pai B"
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Technical Club Head</p>
+              <p class="head_name">Adithya Pai B</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt=""  />
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/adithyapaib')" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://linkedin.com/in/adithyapaib')" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:paiadithya26@gmail.com')" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/sandesh.jpg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
+              <p class="club_title">Coding Club Head</p>
+              <p class="head_name">Sandesh H D</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/_deve.love.per_/')" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/SandeshHD')" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/sandeshhd/')" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:sandeshhd16@gmail.com')" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/SREENIVAS SHENOY.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Coding Club Head</p>
+              <p class="head_name">S SREENIVASA SHENOY</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/__shenoy__/')"/>
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/ssreenivasashenoy')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/s-sreenivasa-shenoy/')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:sreenivasshenoy01@gmail.com')"/>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/Ashwin.png"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Coding Club Head</p>
+              <p class="head_name">G G Ashwin Prabhu</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/instashwin_gg/')"/>
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/GGAshwin')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/mwlite/in/ashwin-prabhu-8a68a71a5')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:ashwinprabhu2001@gmail.com')"/>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/temp.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Head</p>
               <p class="head_name">Paramashiva Karanth</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/shiv__karanth/')" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/shiva-karanth')" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/paramashivakaranth/')" />
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:paramashivakaranth@gmail.com')" />
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/vignesh.png"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Head</p>
+              <p class="head_name">Vignesh</p>
+            </div>
+            <div class="card-logo">
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/vignesh-kundar')"/>
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/vignesh-kundar/')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/vignesh-kundar/')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:vigneshkundar125@gmail.com')"/>
+            </div>
+          </div>
+          <div class="card">
+            <div>
+              <img
+                class="card-img"
+                src="./Images/team/members/temp.jpg"
+                alt=""
+              />
+            </div>
+            <div class="card-content">
+              <p class="club_title">Design Club Head</p>
+              <p class="head_name">Tara Kamath</p>
             </div>
             <div class="card-logo">
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
@@ -95,133 +209,19 @@
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/Udith Bekal.jpeg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
+              <p class="club_title">Geekhub Lead</p>
+              <p class="head_name">Udith Bekal</p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
-            </div>
-          </div>
-          <div class="card">
-            <div>
-              <img
-                class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
-                alt=""
-              />
-            </div>
-            <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
-            </div>
-            <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/the_.young._lord/  ')" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/udibkl')" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/udith-bekal/')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:udithbkl100@gmail.com')" />
             </div>
           </div>
 
@@ -230,76 +230,76 @@
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/temp.jpg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
+              <p class="club_title">Geekhub Head</p>
+              <p class="head_name">Rajath Krishna Prabhu</p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/rajathkprabhu/')"/>
+              <img class="logo_img" src="Images/team/github.svg" alt="" /> 
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/rajath-krishna-prabhu-9b8ba2222/')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:rajathkrishna0905@gmail.com')"/>
             </div>
           </div>
           <div class="card">
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/Elvin.jpeg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
+              <p class="club_title">Geekhub Head</p>
+              <p class="head_name">Elvin Dsouza </p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/elvin.d_/')"/>
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/elvind007')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/elvin-dsouza')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:emdd007@gmail.com')"/>
             </div>
           </div>
           <div class="card">
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/Giridhar.jpg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
+              <p class="club_title">Technovation Club Head</p>
+              <p class="head_name">M Giridhar Bhandary </p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://instagram.com/__gidda__')" />
+              <img class="logo_img" src="Images/team/github.svg" alt=""  onclick="window.open('https://instagram.com/__gidda__')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt=""  onclick="window.open('https://www.linkedin.com/in/m-giridhar-bhandary-504944211')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt=""  onclick="window.open('mailto:mgiribhandary@gmail.com')"/>
             </div>
           </div>
           <div class="card">
             <div>
               <img
                 class="card-img"
-                src="https://c0.wallpaperflare.com/preview/483/210/436/car-green-4x4-jeep.jpg"
+                src="./Images/team/members/Poornima.jpg"
                 alt=""
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Design Club Lead</p>
-              <p class="head_name">Paramashiva Karanth</p>
+              <p class="club_title">Technovation Club Head</p>
+              <p class="head_name">Poornima Vinod Shanbhag</p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
-              <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt=""  onclick="window.open('https://www.instagram.com/shanbhag_poornima/')" />
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/Poornima252001')"/>
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/poornima-shanbhag-a284751b3')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:poornimashanbhag25@gmail.com')"/>
             </div>
           </div>
         </div>
