--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h1 id="bgtext1">TECHNICAL</h1>
         <h1 id="bgtext2">CLUB</h1>
         <div class="grid-container">
-          <div class="content gs_reveal_fromLeft gs_reveal">
+          <div class="content">
             <div class="banner-title">
               <h2>Welcome to</h2>
               <h1 id="type2">Geeks Of Canara</h1>
@@ -82,7 +82,7 @@
               /></div>
             </a>
           </div>
-          <div class="banner-image gs_reveal_fromRight gs_reveal"><img src="./Images/hero-illustration.png" alt="Geeks of Canara"></div>
+          <div class="banner-image"><img src="./Images/hero-illustration.png" alt="Geeks of Canara"></div>
         </div>
         <div class="scroll">
           <a id="scroll-btn" href="#section-2"></a>
@@ -94,13 +94,13 @@
         <h2 class="our_club_heading">Our Clubs</h2>
       <div class="underline"></div>
       <div class="club_container">
-            <div class="club_navigator gs_reveal_fromLeft gs_reveal">
+            <div class="club_navigator">
                 <button class="club_button active" id="club_btn_1" data-id="1"><div class="club_name">Coding Club</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_2" data-id="2"><div class="club_name">Design Club</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_3" data-id="3"><div class="club_name">Geekhub</div><div class="club_icon"></div><div class="pointer"></div></button>
                 <button class="club_button" id="club_btn_4" data-id="4"><div class="club_name">Technovation</div><div class="club_icon"></div><div class="pointer"></div></button>
             </div>
-            <div class="club_info gs_reveal_fromRight gs_reveal">
+            <div class="club_info">
                 <div class="card">
                     <div class="card-img">
                       
@@ -208,7 +208,7 @@
             <div class="underline"></div>
         </div>
          <div class="whatwedo_container">
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
@@ -222,7 +222,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
@@ -236,7 +236,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
@@ -250,7 +250,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
@@ -264,7 +264,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
@@ -278,7 +278,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
