sticky footer and only one year

--- a/events.html
+++ b/events.html
@@ -104,8 +104,8 @@
             <div class="nav_head">Events</div>
 
             <div class="inner_head">
-                <div class="inner_text active">2021</div>
-                <div class="inner_text">2020</div>
+                <div class="inner_text active">2022</div>
+                <!-- <div class="inner_text">2020</div> -->
             </div>
         </div>
 
