--- a/team.html
+++ b/team.html
@@ -152,7 +152,7 @@
             <div>
               <img
                 class="card-img"
-                src="./Images/team/members/temp.jpg"
+                src="./Images/team/members/Paramashiva karanth.jpg"
                 alt=""
               />
             </div>
@@ -190,7 +190,7 @@
             <div>
               <img
                 class="card-img"
-                src="./Images/team/members/temp.jpg"
+                src="./Images/team/members/tara.jpg"
                 alt=""
               />
             </div>
@@ -199,10 +199,10 @@
               <p class="head_name">Tara Kamath</p>
             </div>
             <div class="card-logo">
-              <img class="logo_img" src="Images/team/Instagram.svg" alt="" />
+              <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/tararaa.k/')" />
               <img class="logo_img" src="Images/team/github.svg" alt="" />
-              <img class="logo_img" src="Images/team/linkedin.svg" alt="" />
-              <img class="logo_img" src="Images/team/mail.svg" alt="" />
+              <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/tarakamath')"/>
+              <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:taragkamath@gmail.com')"/>
             </div>
           </div>
           <div class="card">
@@ -214,7 +214,7 @@
               />
             </div>
             <div class="card-content">
-              <p class="club_title">Geekhub Lead</p>
+              <p class="club_title">Geekhub Head</p>
               <p class="head_name">Udith Bekal</p>
             </div>
             <div class="card-logo">
@@ -230,7 +230,7 @@
             <div>
               <img
                 class="card-img"
-                src="./Images/team/members/temp.jpg"
+                src="./Images/team/members/rajath.png"
                 alt=""
               />
             </div>
@@ -240,7 +240,7 @@
             </div>
             <div class="card-logo">
               <img class="logo_img" src="Images/team/Instagram.svg" alt="" onclick="window.open('https://www.instagram.com/rajathkprabhu/')"/>
-              <img class="logo_img" src="Images/team/github.svg" alt="" /> 
+              <img class="logo_img" src="Images/team/github.svg" alt="" onclick="window.open('https://github.com/RealKrisMiles')"/> 
               <img class="logo_img" src="Images/team/linkedin.svg" alt="" onclick="window.open('https://www.linkedin.com/in/rajath-krishna-prabhu-9b8ba2222/')"/>
               <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:rajathkrishna0905@gmail.com')"/>
             </div>
