--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
          <div class="whatwedo_container">
     
   
-            <div class="card">
+            <div class="card gs_reveal_fromLeft gs_reveal">
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
