Contact animation update

--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
       <h2 class="contact_heading">Contact Us</h2>
       <div class="underline"></div>
       <form action="" method="" class="form" autocomplete="off">
-        <div class="form_group">
+        <div class="form_group gs_reveal_fromBottom gs_reveal">
             <div class="form_box">
                 <label for="name">Name</label><br />
                 <input type="text" class="input" id="name" placeholder=" Your name" onkeyup="validateName()"/>
@@ -358,18 +358,18 @@
                 <span class="input-error" id="email-error"></span>
             </div>
         </div>
-        <div class="form_box">
+        <div class="form_box gs_reveal_fromBottom gs_reveal">
             <label for="subject">Subject</label><br />
             <input type="text" class="input" id="subject" placeholder=" Eg. Club Registration" onkeyup="validateSubject()"/>
             <span class="input-error" id="subject-error"></span>
         </div>
-        <div class="form_box">
+        <div class="form_box gs_reveal_fromBottom gs_reveal">
             <label for="message">Message</label><br />
             <textarea name="message" class="input" id="message" rows="5" placeholder=" Type something here..." onkeyup="validateMessage()"></textarea>
             <span class="input-error" id="message-error"></span>
         </div>
         <span class="input-error" id="submit-error"></span>
-        <button class="submit button" onclick="validateForm(event)" id="submit" >
+        <button class="submit button gs_reveal_fromBottom gs_reveal" onclick="validateForm(event)" id="submit" >
       <span
         >Send the Message<img src="./Images/arrow.svg" class="arrow" alt="arrow"
       /></span>
