--- a/team.html
+++ b/team.html
@@ -22,8 +22,9 @@
   </head>
 
   <body>
+    <!-- <div id="preloader"></div> -->
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+     <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
           <a class="navbar-brand" href="index.html">GOC </a>
           <button
@@ -57,7 +58,7 @@
             </ul>
           </div>
         </div>
-      </nav>
+      </nav> 
       <!-- Nav bar end -->
 
     <div class="team-area">
@@ -114,7 +115,7 @@
             <div>
               <img
                 class="card-img"
-                src="./Images/team/members/SREENIVAS SHENOY.jpg"
+                src="./Images/team/members/ssreenivasashenoy.jpg "
                 alt=""
               />
             </div>
@@ -283,6 +284,7 @@
               <img class="logo_img" src="Images/team/mail.svg" alt=""  onclick="window.open('mailto:mgiribhandary@gmail.com')"/>
             </div>
           </div>
+
           <div class="card">
             <div>
               <img
@@ -293,7 +295,7 @@
             </div>
             <div class="card-content">
               <p class="club_title">Technovation Club Head</p>
-              <p class="head_name">Poornima Vinod Shanbhag</p>
+              <p class="head_name">Poornima Vinod Shanbhag </p>
             </div>
             <div class="card-logo">
               <img class="logo_img" src="Images/team/Instagram.svg" alt=""  onclick="window.open('https://www.instagram.com/shanbhag_poornima/')" />
@@ -302,6 +304,7 @@
               <img class="logo_img" src="Images/team/mail.svg" alt="" onclick="window.open('mailto:poornimashanbhag25@gmail.com')"/>
             </div>
           </div>
+    
         </div>
       </div>
     </div>
@@ -339,6 +342,14 @@
     src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"
-    ></script>
+    >
+  // </script>
+  //   <script>
+  //     pre = document.getElementById('preloader');
+  //     window.addEventListener("load", setTimeout(function () {
+  //         pre.style.display = 'none';
+  //     }, 4300))
+  
+  // </script>
     <script src="/team.js"></script>
 </html>
