--- a/developers.html
+++ b/developers.html
@@ -194,7 +194,7 @@
 				<div class="col-sm-6 col-lg-4 col-xl-3">
 					<div class="single-person" onclick="window.open('https://www.instagram.com/__shenoy__/')">
 						<div class="person-image">
-							<img src="./Images/team/members/SREENIVAS SHENOY.jpg" alt="">
+							<img src="./Images/team/members/ssreenivasashenoy.jpg" alt="">
 							<span class="icon">
 								<i class="fab fa-html5"></i>
 							</span>
