--- a/team.html
+++ b/team.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <!-- <div id="preloader"></div> -->
+    <div id="preloader"></div>
     <!-- Nav bar -->
      <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
@@ -343,13 +343,13 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"
     >
-  // </script>
-  //   <script>
-  //     pre = document.getElementById('preloader');
-  //     window.addEventListener("load", setTimeout(function () {
-  //         pre.style.display = 'none';
-  //     }, 4300))
+  </script>
+    <script>
+      pre = document.getElementById('preloader');
+      window.addEventListener("load", setTimeout(function () {
+          pre.style.display = 'none';
+      }, 4300))
   
-  // </script>
+   </script>
     <script src="/team.js"></script>
 </html>
