--- a/index.html
+++ b/index.html
@@ -404,7 +404,7 @@
         </ul>
       </div>
       <div class="copyright">
-      <p><a href="/developers.html">Meet The Team</a></p>
+      <p class="first_link"><a href="/developers.html" >Meet The Team</a></p>
       </div>
       
     </footer>
