--- a/team.html
+++ b/team.html
@@ -22,7 +22,10 @@
   </head>
 
   <body>
-    <div id="preloader"></div>
+  
+    
+
+
     <!-- Nav bar -->
      <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
         <div class="container-fluid">
@@ -60,7 +63,7 @@
         </div>
       </nav> 
       <!-- Nav bar end -->
-
+      <div class="loader-parent"><div class="lds-ellipsis"><div></div><div></div><div></div><div></div></div></div>
     <div class="team-area">
       <div class="sub-nav">
         <div class="nav_head">Team</div>
@@ -345,10 +348,12 @@
     >
   </script>
     <script>
-      pre = document.getElementById('preloader');
+      pre = document.getElementsByClassName('loader-parent');
+      nav = document.querySelector('.navbar');
       window.addEventListener("load", setTimeout(function () {
-          pre.style.display = 'none';
-      }, 4300))
+        nav.style.display="flex";
+          pre[0].style.display = 'none';
+      }, 2000))
   
    </script>
     <script src="/team.js"></script>
