--- a/index.html
+++ b/index.html
@@ -132,10 +132,10 @@
       <div class="underline"></div>
       <div class="club_container">
             <div class="club_navigator">
-                <button class="club_button active" id="club_btn_1" data-id="1"><div class="club_name">Coding Club</div><div class="club_icon"></div><div class="pointer"></div></button>
-                <button class="club_button" id="club_btn_2" data-id="2"><div class="club_name">Design Club</div><div class="club_icon"></div><div class="pointer"></div></button>
-                <button class="club_button" id="club_btn_3" data-id="3"><div class="club_name">Geekhub</div><div class="club_icon"></div><div class="pointer"></div></button>
-                <button class="club_button" id="club_btn_4" data-id="4"><div class="club_name">Technovation</div><div class="club_icon"></div><div class="pointer"></div></button>
+                <button class="club_button active" id="club_btn_1" data-id="1"><div class="club_name">Coding Club</div><div class="club_icon"><img src="./Images/Icons/coding club.svg" alt="Coding Club"></div><div class="pointer"></div></button>
+                <button class="club_button" id="club_btn_2" data-id="2"><div class="club_name">Design Club</div><div class="club_icon"><img src="./Images/Icons/design club.svg" alt="Design Club"></div><div class="pointer"></div></button>
+                <button class="club_button" id="club_btn_3" data-id="3"><div class="club_name">Geekhub</div><div class="club_icon"><img src="./Images/Icons/geekhub.svg" alt="Geekhub"></div><div class="pointer"></div></button>
+                <button class="club_button" id="club_btn_4" data-id="4"><div class="club_name">Technovation</div><div class="club_icon"><img src="./Images/Icons/technovation.svg" alt="Technovation"></div><div class="pointer"></div></button>
             </div>
             <div class="club_info">
                 <div class="card">
@@ -149,7 +149,7 @@
                               Coding Club
                             </h3>
                             <div class="circle">
-                                a
+                              <img src="./Images/Icons/coding club.svg" alt="Coding Club">
                             </div>
                         </div>
                       <p class="card-description">
@@ -172,7 +172,7 @@
                               Design Club
                             </h3>
                             <div class="circle">
-                                a
+                              <img src="./Images/Icons/design club.svg" alt="Design Club">
                             </div>
                         </div>
                       <p class="card-description">
@@ -195,7 +195,7 @@
                               Geekhub
                             </h3>
                             <div class="circle">
-                                a
+                              <img src="./Images/Icons/geekhub.svg" alt="Geekhub">
                             </div>
                         </div>
                       <p class="card-description">
@@ -218,7 +218,7 @@
                               Technovation
                             </h3>
                             <div class="circle">
-                                a
+                              <img src="./Images/Icons/technovation.svg" alt="Technovation">
                             </div>
                         </div>
                       <p class="card-description">
@@ -257,9 +257,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                            Workshops
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
@@ -271,9 +271,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                          Hackathons
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/hackathon.svg" alt="Competitions"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
@@ -285,9 +285,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                            Projects
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
@@ -299,9 +299,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                            Peer Learning
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
@@ -313,9 +313,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                            Mentorship
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
@@ -327,9 +327,9 @@
                 <div class="card-content">
                     <div class="card-heading-container">
                         <h3 class="card-heading">
-                            Workshop
+                            Contents
                         </h3>
-                        <div class="circle"></div>
+                        <div class="circle"><img src="./Images/Icons/workshops.svg" alt="Workshops"></div>
                     </div>
                     <div class="card-description">
                         Lorem ipsum dolor sit amet consectetur
