--- a/developers.html
+++ b/developers.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/fontawesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.4.1/css/bootstrap.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js" type="text/javascript"></script>
-
+	<link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/prefixfree/1.0.7/prefixfree.min.js"></script>
 	
@@ -16,10 +16,12 @@
 
 </head>
 <body >
+
+
 <!-- partial:index.partial.html -->
   
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light sticky-top">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top align-items-end">
         <div class="container-fluid">
           <a class="navbar-brand" href="/index.html">GOC </a>
           <button
@@ -39,10 +41,10 @@
                 <a class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#our_club">Our Clubs</a>
+                <a class="nav-link" href="/#our_club">Our Clubs</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#goals">Goals</a>
+                <a class="nav-link" href="/#goals">Goals</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="/events.html">Events</a>
@@ -76,7 +78,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/sandesh.jpg" alt="">
 							<span class="icon">
-								<i class="fab fa-html5"></i>
+								<i class="fa fa-cogs" aria-hidden="true"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -124,7 +126,7 @@
                             <div class="person-image">
                                 <img src="./Images/team/members/Paramashiva karanth.jpg" alt="">
                                 <span class="icon">
-                                    <i class="fab fa-html5"></i>
+                                    <i class="fab fa-codepen"></i>
                                 </span>
                             </div>
                             <div class="person-info">
@@ -176,7 +178,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/Ashwin.png" alt="">
 							<span class="icon">
-								<i class="fab fa-html5"></i>
+								<i class="fab fa-codepen"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -194,7 +196,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/ssreenivasashenoy.jpg" alt="">
 							<span class="icon">
-								<i class="fab fa-html5"></i>
+								<i class="fab fa-codepen"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -216,7 +218,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/karthik.jpeg" alt="">
 							<span class="icon">
-								<i class="fab fa-html5"></i>
+								<i class="fab fa-codepen"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -236,7 +238,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/Elvin.jpeg" alt="">
 							<span class="icon">
-								<i class="fab fa-html5"></i>
+								<i class="fab fa-github"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -256,7 +258,7 @@
 						<div class="person-image">
 							<img src="./Images/team/members/harikishan.jpeg" alt="">
 							<span class="icon">
-								<i class="fab fa-write"></i>
+								<i class="fab fa-codepen"></i>
 							</span>
 						</div>
 						<div class="person-info">
@@ -268,6 +270,7 @@
 				<!-- / End Single Person -->
 			</div>
 		</div>
+	
 	</section>
 
 </body>
